--- a/mypackages.sty
+++ b/mypackages.sty
@@ -8,6 +8,8 @@
 \usepackage{fourier} %type style
 
 \usepackage{amsmath}  % improve math presentation
+\usepackage{graphicx, wrapfig, subcaption, setspace, booktabs}
+
 %-------------------------------
 % Header and Footer
 %-------------------------------
