--- a/main.tex
+++ b/main.tex
@@ -78,7 +78,7 @@
 \appendix
 \chapter{Appendix Title}
 \input{appendix/appendix}
-\chapter{Fundamentals of signal analysis and measurement}
+\chapter{Fundamentals of signal analysis and measurement}\label{ch:app_B}
 \input{appendix/appendix_b}
 \chapter{Glossary and defintions}
 \input{appendix/glossary}
