explain assumptions for the measured noise spectra

--- a/main.tex
+++ b/main.tex
@@ -61,7 +61,7 @@
 \chapter{Emittance growth studies 2018: Measurements and analysis}\label{Ch:2018_analyisis}
 \input{chapters/chapter06}
 
-\chapter{Investigation of the discrepancy}
+\chapter{Investigation of the discrepancy}\label{Ch:investigating_discrepancy}
 \input{chapters/chapter07}
 
 \chapter{Simple model of describing the decoherence suppression from impedance}
