--- a/main.tex
+++ b/main.tex
@@ -76,7 +76,7 @@
 % The end matter
 \printglossaries
 \appendix
-\chapter{Appendix Title}
+\chapter{Definitions and  methods of statistical analysis}
 \input{appendix/appendix}
 \chapter{Fundamentals of signal analysis and measurement}\label{ch:app_B}
 \input{appendix/appendix_b}
