uncertainty of the mean of two values

--- a/references.bib
+++ b/references.bib
@@ -416,3 +416,10 @@ edition = {2}
       %year   = "2020",
       note = "Accessed November 5, 2020"
 }
+
+@misc{uncertainty_in_the_mean,
+  title = {Managin errors and uncertainties},
+  author = {University of Pennsylvania, Department of Physics and astronomy, Lab manual},
+  url  =  {https://www.physics.upenn.edu/sites/default/files/Managing%20Errors%20and%20Uncertainty.pdf},
+  note = {Accessed: 18-03-2022},
+}
