--- a/mypackages.sty
+++ b/mypackages.sty
@@ -110,3 +110,5 @@
 
 \usepackage{cancel} % enable different four modes of striking through
 \usepackage{verbatim} % for commenting out multiple lines
+\usepackage{rotating}
+\usepackage{tikz}
