update figure with overview MD5

--- a/references.bib
+++ b/references.bib
@@ -423,3 +423,12 @@ edition = {2}
   url  =  {https://www.physics.upenn.edu/sites/default/files/Managing%20Errors%20and%20Uncertainty.pdf},
   note = {Accessed: 18-03-2022},
 }
+
+
+@misc{Baudrenghien_HL-LHC19v6,
+  title = {LLRF experience for SPS $\&$ HL-LHC Outlook},
+  author = {Philippe Baudrenghien},
+  url  =  {https://indico.cern.ch/event/787363/contributions/3367294/attachments/1865644/3067685/HL-LHC19v6.pdf},
+  note = {Accessed: 11-11-2021},
+}
+
