longitudinal profile measurements

--- a/references.bib
+++ b/references.bib
@@ -277,7 +277,7 @@ author = {J. Bosser and J. Camas and L. Evans and G. Ferioli and R. Hopkins and 
 }
 
 @article{Papotti:1124099,
-      author        = "Papotti, G",
+      author        = "Papotti, G.",
       title         = "{A Beam Quality Monitor for LHC Beams in the SPS}",
       reportNumber  = "LHC-PROJECT-Report-1154, CERN-LHC-PROJECT-Report-1154",
       pages         = "4 p",
@@ -430,5 +430,10 @@ edition = {2}
   author = {Philippe Baudrenghien},
   url  =  {https://indico.cern.ch/event/787363/contributions/3367294/attachments/1865644/3067685/HL-LHC19v6.pdf},
   note = {Accessed: 11-11-2021},
+}
+
+@misc{Argyropoulos_unstable_bunches_2018,
+  title = {Private communication, Nov 2020},
+  author = {T. Argyropoulos},
 }
 
