finish rms tune spread in sps

--- a/main.tex
+++ b/main.tex
@@ -80,6 +80,8 @@
 \input{appendix/appendix}
 \chapter{Fundamentals of signal analysis and measurement}\label{ch:app_B}
 \input{appendix/appendix_b}
+\chapter{Appendix c}\label{ch:app_B}
+\input{appendix/appendix_c}
 \chapter{Glossary and defintions}
 \input{appendix/glossary}
 
