--- a/references.bib
+++ b/references.bib
@@ -437,3 +437,14 @@ edition = {2}
   author = {T. Argyropoulos},
 }
 
+@article{Bartosik:2207443,
+      author        = "Bartosik, Hannes and Oeftiger, Adrian and Schenk, Michael
+                       and Schmidt, Frank and Titze, Malte",
+      title         = "{Improved Methods for the Measurement and Simulation of
+                       the CERN SPS Non-linear Optics}",
+      reportNumber  = "CERN-ACC-2016-180",
+      pages         = "THPMR036. 4 p",
+      year          = "2016",
+      url           = "https://cds.cern.ch/record/2207443",
+      doi           = "10.18429/JACoW-IPAC2016-THPMR036",
+}
