--- a/main.tex
+++ b/main.tex
@@ -52,13 +52,13 @@
 \chapter{Calibration of the Crab Cavities for the SPS tests in 2018}\label{Ch:CC_set_up}
 \input{chapters/chapter04}
 
-\chapter{Experimental studies 2018: emittance growth from Crab Cavity noise}\label{Ch:2018_setup}
+\chapter{Experimental studies 2018: emittance growth from Crab Cavity noise}\label{Ch:2018_analyisis}
 \input{chapters/chapter05}
 
 %\chapter{Emittance growth studies 2018: Operational setup/preparation and beam instrumentation}\label{Ch:2018_setup}
 %\input{chapters/chapter05}
 
-\chapter{Emittance growth studies 2018: Measurements and analysis}\label{Ch:2018_analyisis}
+\chapter{Emittance growth studies 2018: Measurements and analysis}\label{Ch:2018_analyisis_1}
 \input{chapters/chapter06}
 
 \chapter{Investigation of the discrepancy}\label{Ch:investigating_discrepancy}
