add comment onthe asyymetric response of the HT monitor

--- a/references.bib
+++ b/references.bib
@@ -448,3 +448,9 @@ edition = {2}
       url           = "https://cds.cern.ch/record/2207443",
       doi           = "10.18429/JACoW-IPAC2016-THPMR036",
 }
+@misc{Levens_WP2_HT_CC_diagnostic,
+  title = {Head-Tail Monitor for CC Diagnostics},
+  author = {Tom Levens},
+  url  =  {https://indico.cern.ch/event/826475/contributions/3457525/attachments/1872464/3081710/2019-07-02_HL_WP2_tlevens.pdf},
+  note = {Accessed: 11-04-2022},
+}
