add comment with link to post processing path

--- a/appendix/appendix_b.tex
+++ b/appendix/appendix_b.tex
@@ -1,5 +1,5 @@
 % overleaf document: measured noise spectrum2 simulations with some small modifications. Also use passive voice instead of "we". 
-%% plots are produced: cernbox/Project_thesis/scripts_for_simple_figures_plots. and for Fig.6 /eos/user/n/natriant/pyheadtail_data/9July2021
+%% plots are produced: cernbox/Project_thesis/scripts_for_simple_figures_plots (also at /eos/user/n/natriant/2018/CC_MD_2018_summary/measured_psd/job000). and for Fig.6 /eos/user/n/natriant/pyheadtail_data/9July2021. 
 
 This appenidx discusses the basic terminology of signal processing and gives the definitions which are used in this thesis. The focus is on Fourier transform and the power spectral density. First the most general mathematical definitions which concern signals continuous in time and with infinite time duration are discussed. Secondly, the definitions are given for signals sampled at a finite number of points, which are considered for the measurements and for the computational analysis. Furthermore, the quantities that are used most often for noise power spectrum measurements and their relationship to the mathematical definitions of the power spectral density are discussed. Finally, the way of applying a measured noise spectrum in numerical simulations is described.
 
