--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,7 @@
 \frontmatter
 % The front matter
 \title{
-{Noise studies with Crab Cavities in the SPS for the HL-LHC project}\\
+{Studies of the emittance growth due to the crab cavity noise in the SPS for the High Luminosity LHC project}\\
 {\includegraphics{UoL.jpeg}} \\
 {\large Thesis submitted in accordance with the requirements of the University of Liverpool for the degree of Doctor in Philosophy \\ by}
 }
