re-aranging theorder of the chapters

--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,7 @@
 \frontmatter
 % The front matter
 \title{
-{Studies of the emittance growth due to the crab cavity noise in the SPS for the High Luminosity LHC project}\\
+{Studies of the Emittance Growth Due to Crab Cavity Noise in the SPS for the High Luminosity LHC Project}\\
 {\includegraphics{UoL.jpeg}} \\
 {\large Thesis submitted in accordance with the requirements of the University of Liverpool for the degree of Doctor in Philosophy \\ by}
 }
@@ -58,10 +58,10 @@
 %\chapter{Emittance growth studies 2018: Operational setup/preparation and beam instrumentation}\label{Ch:2018_setup}
 %\input{chapters/chapter05}
 
-\chapter{Emittance growth studies 2018: Measurements and analysis}\label{Ch:2018_analyisis_1}
+\chapter{Investigation of the discrepancy}\label{Ch:investigating_discrepancy}
 \input{chapters/chapter06}
 
-\chapter{Investigation of the discrepancy}\label{Ch:investigating_discrepancy}
+\chapter{Suppression mechanism from the beam transverse impedance}\label{Ch:suppression_impedances}\label{Ch:2018_analyisis_1}
 \input{chapters/chapter07}
 
 \chapter{Simple model of describing the decoherence suppression from impedance}
@@ -70,8 +70,8 @@
 \chapter{Experimental studies 2021}
 \input{chapters/chapter09}
 
-\chapter{Application and impact for HL-LHC}
-\input{chapters/chapter10}
+
+
 
 \chapter{Conclusion}
 \input{chapters/conclusion}
