first commit intro chapter 7

--- a/main.tex
+++ b/main.tex
@@ -61,7 +61,7 @@
 \chapter{Investigation of the discrepancy}\label{Ch:investigating_discrepancy}
 \input{chapters/chapter06}
 
-\chapter{Suppression mechanism from the beam transverse impedance}\label{Ch:suppression_impedances}\label{Ch:2018_analyisis_1}
+\chapter{Suppression mechanism from the beam transverse impedance}\label{Ch:suppression_impedances}\label{Ch:suppression_impedance}
 \input{chapters/chapter07}
 
 \chapter{Simple model of describing the decoherence suppression from impedance}
