--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,7 @@
 \frontmatter
 % The front matter
 \title{
-{Studies of the Emittance Growth Due to Crab Cavity Noise in the SPS for the High Luminosity LHC Project}\\
+{Studies of the emittance growth due to noise in the Crab Cavity RF systems}\\
 {\includegraphics{UoL.jpeg}} \\
 {\large Thesis submitted in accordance with the requirements of the University of Liverpool for the degree of Doctor in Philosophy \\ by}
 }
