first commit on the sps imepdance model

--- a/references.bib
+++ b/references.bib
@@ -454,3 +454,29 @@ edition = {2}
   url  =  {https://indico.cern.ch/event/826475/contributions/3457525/attachments/1872464/3081710/2019-07-02_HL_WP2_tlevens.pdf},
   note = {Accessed: 11-04-2022},
 }
+
+@misc{sps_impedance_model_git,
+  title = {Repository of SPS impedance model},
+  url  =  {https://gitlab.cern.ch/IRIS/SPS_IW_model},
+  note = {Accessed: 3-6-2022},
+}
+
+@thesis{Salvant:1274254,
+      author        = "Salvant, Benoit",
+      title         = "{Impedance model of the CERN SPS and aspects of LHC
+                       single-bunch stability}",
+      year          = "2010",
+      url           = "https://cds.cern.ch/record/1274254",
+      note          = "Presented on 04 Mar 2010",
+      doi           = "10.5075/epfl-thesis-4585",
+}
+@thesis{Zannini:1561199,
+      author        = "Zannini, Carlo",
+      title         = "{Electromagnetic Simulation of CERN accelerator Components
+                       and Experimental Applications}",
+      month         = "Mar",
+      year          = "2013",
+      url           = "https://cds.cern.ch/record/1561199",
+      note          = "Presented 15 Apr 2013",
+}
+    
