add plots of sps imepdance model

--- a/references.bib
+++ b/references.bib
@@ -479,4 +479,27 @@ edition = {2}
       url           = "https://cds.cern.ch/record/1561199",
       note          = "Presented 15 Apr 2013",
 }
-    
+
+@article{Salvant:1271349,
+      author        = "Salvant, B and Mounet, N and Zannini, C and Arduini, G and
+                       Berrig, O and Caspers, F and Grudiev, A and Métral, E and
+                       Rumolo, G and Shaposhnikova, E and Zotter, B and
+                       Migliorati, M and Spataro, B",
+      title         = "{Update of the SPS Impedance Model}",
+      reportNumber  = "CERN-ATS-2010-077",
+      pages         = "3 p",
+      month         = "Jun",
+      year          = "2010",
+      url           = "https://cds.cern.ch/record/1271349",
+}
+  
+@article{Zannini:2141779,
+      author        = "Zannini, Carlo and Bartosik, Hannes and Iadarola, Giovanni
+                       and Rumolo, Giovanni and Salvant, Benoit",
+      title         = "{Benchmarking the CERN-SPS Transverse Impedance Model with
+                       Measured Headtail Growth Rates}",
+      reportNumber  = "CERN-ACC-2015-335",
+      pages         = "MOPJE049. 4 p",
+      year          = "2015",
+      url           = "https://cds.cern.ch/record/2141779",
+}
