bunch represetnation in pyheadtail

--- a/references.bib
+++ b/references.bib
@@ -503,3 +503,21 @@ edition = {2}
       year          = "2015",
       url           = "https://cds.cern.ch/record/2141779",
 }
+
+@misc{pyheadtail_repository,
+  title = {PyHEADTAIL code repository},
+  url  =  {https://github.com/PyCOMPLETE/PyHEADTAIL},
+  note = {Accessed: 5-6-2022},
+}
+
+
+
+@misc{pyheadtail_schenk,
+  title = {Beam dynamics simulations with the PyHEADTAIL and PyECLOUD macroparticle codes.},
+  author = {Michael Schenk},
+  url  =  {https://www2.kek.jp/accl/legacy/seminar/file/PyHEADTAIL_PyECLOUD_2.pdf},
+  note = {Accessed: 05-06-2022},
+}
+
+
+
